--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,7 +238,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/f4.jpg");
+  background: url("../img/f10.png");
   background-size: cover;
 }
 
